--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT= 1821
-mongoURI= "mongodb+srv://admin01:admin01@project-m0.qihnj.mongodb.net/?retryWrites=true&w=majority"
-jwtSecret= "mysecrettoken"
-githubSecret= "de7831859fc2e86913e88a2646fbb8bcc1ccc840"
-githubClientId= "943d5c0e17971842a288"
+MONGO_URI= mongodb+srv://admin01:admin01@project-m0.qihnj.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET= mysecrettoken
+GITHUB_SECRET= de7831859fc2e86913e88a2646fbb8bcc1ccc840
+GITHUB_CLIENT_ID= 943d5c0e17971842a288
